--- a/form_odev.html
+++ b/form_odev.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Form Ödevi</title>
 </head>
-<body style="background-color:maroon ;">
+<body style="background-color:maroon ;" oncontextmenu="return false">
 <!-- Form başlangıcı-->
 <form name="yarisma_form" method="get">
 	<label for="form_element" style="font-size:20px;  color:white; font-weight:bolder">Yarışmaya katılmak için lütfen aşağıdaki formu doldurun</label>
