--- a/form_odev.html
+++ b/form_odev.html
@@ -22,7 +22,7 @@
             <td>:</td>
 			<!-- Bu input @ işereti var mı diye kontrol eder.-->
             <td><input type="email" placeholder="email@site.com"></td>
-        </tr>
+        </tr>fgfdg
         <tr>
             <td>Telefon Numaranız</td>
             <td>:</td>
